# wushuu

./: .gitignore  CMakeLists.txt  README.md  cfg32  project.clj
cmake/: CompilerFlags.cmake  FindDependencies.cmake
conf/: ffserver.conf
device/hikvision/include/: HCNetSDK.h  LinuxPlayM4.h
lib/opencv/opencv/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
lib/opencv/opencv/245/: opencv-245.jar.md5  opencv-245.jar.sha1  opencv-245.pom  opencv-245.pom.md5  opencv-245.pom.sha1
src/cpp/: .facedetect.cpp.swp  CMakeLists.txt  Makefile  bgfg_codebook.cpp  bgfg_codebook.hpp  blobanalyzer.cpp  cmake_install.cmake  facedetect.cpp  facedetect.hpp  fd  hik.cpp  libwsfd.so.1  libwsfd.so.1.0
src/java/com/wushuu/: Demo.java  SimpleSample.java  Topology.java
src/java/com/wushuu/bolt/: FaceDetectBolt.java  JDBCBolt.java
src/java/com/wushuu/common/: BgFgDetectResult.java  DetectTarget.java  DetectType.java  FaceDetectResult.java
src/java/com/wushuu/jna/: WSLibrary.java
src/java/com/wushuu/spout/: BgFgSpout.java  DirSpout.java  FaceDetectSpout.java
src/jvm/com/wushuu/: Demo.java  SimpleSample.java  Topology.java
src/jvm/com/wushuu/bolt/: DetectBolt.java  JDBCBolt.java
src/jvm/com/wushuu/jna/: WSLibrary.java
src/jvm/com/wushuu/spout/: DirSpout.java
src/main/cpp/: CMakeLists.txt  bgfg_codebook.cpp  bgfg_codebook.hpp  blobanalyzer.cpp  facedetect.hpp
src/main/java/com/wushuu/: Demo.java
src/main/java/com/wushuu/bolt/: FaceDetectBolt.java  JDBCBolt.java
src/main/java/com/wushuu/common/: AbstractDetectResult.java  BgFgDetectResult.java  DetectTarget.java  FaceDetectResult.java
src/main/java/com/wushuu/jna/: WSLibrary.java
src/main/java/com/wushuu/spout/: BgFgSpout.java  DirSpout.java  FaceDetectSpout.java
src/test/cpp/: CMakeLists.txt  test.cpp  test_blobanalyzer.cpp
src/test/java/com/wushuu/common/: DetectResultTest.java
test/cpp/: CMakeLists.txt  test.cpp  test_blobanalyzer.cpp
test/java/com/wushuu/: FileStorageYAMLTest.java  FooTest.java
test/java/com/wushuu/common/: DetectResultTest.java
tools/: build_all.sh  build_ffmpeg.sh  build_opencv.sh  build_pkg-config.sh  build_yasm.sh  ffmpeg-1.2.1.patch
